# bloodbot

./: .terraform.lock.hcl  LICENSE  README.md  main.tf  variables.tf
.github/workflows/: deploy.yaml  terraform.yaml
bloodbot/: bloodbot.py
src/: app.py  pyproject.toml  requirements.txt
src/bloodbot/: bloodbot.py
terraform/: main.tf  variables.tf
