[tool.poetry]
name = "bloodbot"
version = "0.2.0"
description = "Periodically check the Blood Brothers Brewery bottle shop for updates"
authors = ["Tristan Bates"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
boto3 = "^1.34.69"

[tool.poetry.scripts]
bloodbot = "app:main"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
